--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="google-site-verification" content="google3c3489f" />
     <title>Elegant Boutique</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -80,4 +81,5 @@
 <script src="script.js"></script>
 
 </body>
+
 </html>
